gcc/testsuite/gm2/iso/fail/badfield2.mod
MODULE badfield2 ;

TYPE
   rec = RECORD
            xpos,
            ypos: CARDINAL ;
         END ;

VAR
   v: rec ;
BEGIN
   WITH v DO
      xpod := 1
   END
END badfield2.
